# killtimer

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: publish-on-pypi.yml
killtimer/: main.py  stats.py
