[tool.poetry]
name = "killtimer"
version = "0.1.0"
description = ""
authors = ["Pawel Zukowski <p.z.idlecode@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
rich = "^12.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
